Closed
Bug 209496
Opened 22 years ago
Closed 22 years ago
"Paste" is not possble after a "Cut" on GTK2 build
Categories
(Firefox :: Bookmarks & History, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: andre.bugs2, Assigned: p_ch)
References
Details
Attachments
(1 file)
650 bytes,
patch
|
jerry.tan
:
review+
blizzard
:
superreview+
|
Details | Diff | Splinter Review |
[Build-ID: 2003061602, GTK2]
This bug is only present when you build a GTK2-enabled Mozilla Firebird - I have
verified that it does not occur in the latest gtk1.2 nightly. In a GTK2 build
however, if you select a bookmark in the bookmark manager, select "Cut" from the
context menu or normal menu, and then try to paste it somewhere else, the
"Paste" menu entry is not enabled. Fortunately, "Undo" works, so you can get
your bookmark back.
Steps to reproduce:
1) Get a GTK2-enabled Mozilla Firebird.
2) Enter Manage Bookmarks and select a bookmark entry.
3) Choose Edit->Cut from the menu.
4) Move to where you want to paste the entry and open the Edit menu.
Result:
The "Paste" option is disabled.
Expected result:
"Paste" should be enabled and allow me to paste what I have in the clipboard.
![]() |
Reporter | |
Updated•22 years ago
|
Summary: "Paste" is not possble after a "Cut" - bookmark is lost → "Paste" is not possble after a "Cut" on GTK2 build
![]() |
Reporter | |
Comment 1•22 years ago
|
||
My guess is that it was broken by the checkin for bug 200480. Debian ships a
gtk2 build of mozilla-firebird 0.6, and this was broken back then too.
![]() |
||
Updated•22 years ago
|
Comment 3•22 years ago
|
||
I have the same problem with the Mozilla version 1.4 provided by Red Hat's rawhide.
Version:
Mozilla 1.4 Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4) Gecko/20030703
![]() |
||
Comment 4•22 years ago
|
||
Confirming bug still present on Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5b)
Gecko/20030804 Mozilla Firebird/0.6.1
Comment 5•22 years ago
|
||
Shouldn't the severity of this bug be "blocker"? Having the paste function
disabled for bookmark management is a serious bug. I know that I will not
deploy a browser on our 500+ desktop park with such an important feature missing.
My bet is that the bug, while serious, would not be difficult to fix. Its
probably just a bad "if" statement that fails to enable the "paste" menu item
when the bookmark clipboard is full or something simillar, which would be quick
to fix.
![]() |
||
Comment 6•22 years ago
|
||
If GTK2 was the primary toolkit for Firebird, it would be a blocker. However,
it is not at present, GTK 1.2 is, and nightly builds are built with GTK 1.2 and
do not exhibit this symptom. If a vendor or individual chooses to compile with
GTK2 support, that is their choice, however it is not currently recommended for use.
![]() |
||
Comment 7•22 years ago
|
||
I experienced this BUG on GTK2 build of mozilla 1.4. I think
the "Product" field of this bug should be extented not only to Firebird.
Comment 8•22 years ago
|
||
*** Bug 219814 has been marked as a duplicate of this bug. ***
![]() |
||
Comment 9•22 years ago
|
||
The fix is caused by a typo in nsClipboard.cpp.
![]() |
||
Updated•22 years ago
|
Attachment #131949 -
Flags: superreview?(blizzard)
Attachment #131949 -
Flags: review?(jerry.tan)
Attachment #131949 -
Flags: review?(jerry.tan) → review+
![]() |
||
Updated•22 years ago
|
Attachment #131949 -
Flags: superreview?(blizzard) → superreview+
![]() |
||
Comment 10•22 years ago
|
||
patch checked in. Thanks blizzard and jerry.
Comment 12•22 years ago
|
||
Has this bug been fixed for Mozilla too? Or is the fix only specific to Firebird?
![]() |
||
Comment 13•22 years ago
|
||
*** Bug 224920 has been marked as a duplicate of this bug. ***
![]() |
||
Comment 14•19 years ago
|
||
sorry for bugspam, long-overdue mass reassign of ancient QA contact bugs, filter on "beltznerLovesGoats" to get rid of this mass change
QA Contact: mconnor → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•