bug 209496 "Paste is not possible after a "Cut" on GTK2 build" r = jerry.tan sr = blizzard